--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p>Collect the food to grow and increase speed.</p>
 
-<p>&copy; 2016 - <a href="http://www.amitk.co.in">AmitK</a></p>  
+<p>&copy; 2017 - <a href="http://www.amitk.co.in">AmitK</a> | Get the <a href="https://github.com/AmitKKhanchandani/Html5-Snake-Game">Source Code</a> </p>  
 <script type="text/javascript" src="game.js"></script>
 </body>
 </html>
